--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-    <h1>Matusala's Blog Posts</h1>
+    <header>
+        <h1>Matusala's Blog Posts</h1>
+        <button class="first-button">Click Me!</button>
+    </header>
+    
 </body>
 </html>
